--- a/solutions.css
+++ b/solutions.css
@@ -56,6 +56,31 @@
   margin: 17px 13px;
 }
 
-.fa-circle-notch{
-  transform:rotate(360deg);
+.ex-10-icon{
+  animation: ruota 4s linear infinite;
 }
+
+@keyframes ruota{
+  0%{
+    transform: rotate(1turn);
+  }
+}
+
+.ex-11-icon:hover{
+  animation: gira 2s linear;
+}
+
+@keyframes gira{
+  0%{
+    transform: rotate(0);
+  }
+
+  70%{
+    transform: rotate(270deg);
+  }
+
+  100%{
+    transform: rotate(0);
+  }
+}
+
