--- a/solutions.css
+++ b/solutions.css
@@ -84,3 +84,74 @@
   }
 }
 
+.ex-12-button:hover .ex-12-top-white {
+  animation: biancog 1s linear;
+}
+@keyframes biancog {
+  0% {
+      left: 20%;
+  }
+  50% {
+      left: 40%;
+  }
+  100% {
+      left: 20%;
+  }
+}
+.ex-12-button:hover .ex-12-bottom-white {
+  animation: biancos 1s linear;
+}
+@keyframes biancos {
+  0% {
+      right: 20%;
+  }
+  50% {
+      right: 40%;
+  }
+  100% {
+      right: 20%;
+  }
+}
+
+.ex-13-button:hover .ex-13-top-white {
+  animation: sotto1 2s linear;
+}
+@keyframes sotto1 {
+  0% {
+      left: 10%;
+      top: -10px;
+  }
+  35% {
+      left: 75%;
+      top: -10px;
+  }
+  75% {
+      left: 75%;
+      top: 50px;
+  }
+  100% {
+      left: 50%;
+      top: 50px;
+  }
+}
+.ex-13-button:hover .ex-13-bottom-white {
+  animation: sotto2 2s linear;
+}
+@keyframes sotto2 {
+  0% {
+      right: 20%;
+      bottom: -10px;
+  }
+  35% {
+      right: 71%;
+      bottom: -10px;
+  }
+  75% {
+      right: 71%;
+      bottom: 55px;
+  }
+  100% {
+      right: 59%;
+      bottom: 60px;
+  }
+}
